--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "email" : "dong.joseph2810@gmail.com"
     },
     "require": {
-        "intervention/image": "^2.5"
+        "intervention/image": "^2.5",
+        "unisharp/laravel-filemanager": "^2.2"
     },
     "authors": [
         {
