--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Dnsoft\\Media\\MediaServiceProvider"
+                "DnSoft\\Media\\MediaServiceProvider"
             ]
         }
     }
